--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "@tiptap/extension-text-style": "^3.10.7",
     "@tiptap/react": "^3.10.7",
     "@tiptap/starter-kit": "^3.10.7",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/qrcode": "^1.5.5",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/uuid": "^10.0.0",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.2",
+    "canvas-confetti": "^1.9.4",
     "clsx": "^2.1.1",
     "csv-parser": "^3.2.0",
     "date-fns": "^4.1.0",
