--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "swiper": "^11.2.10",
+    "swr": "^2.3.7",
     "tailwind-merge": "^3.4.0",
     "three": "^0.181.0",
     "uuid": "^13.0.0",
